@@ -1,10 +1,15 @@
 package com.clinicaregional.clinica.service.impl;
 
+
 import com.clinicaregional.clinica.dto.PacienteConUserDTO;
 import com.clinicaregional.clinica.dto.PacienteSinUserDTO;
 import com.clinicaregional.clinica.dto.TipoDocumentoDTO;
 import com.clinicaregional.clinica.dto.UsuarioDTO;
 import com.clinicaregional.clinica.dto.request.UpdatePacienteDTO;
+
+
+import com.clinicaregional.clinica.dto.PacienteDTO;
+
 import com.clinicaregional.clinica.dto.response.MyInfoPaciente;
 import com.clinicaregional.clinica.dto.response.PagedResponse;
 import com.clinicaregional.clinica.entity.Paciente;
@@ -16,6 +21,7 @@ import com.clinicaregional.clinica.exception.ResourceNotFoundException;
 import com.clinicaregional.clinica.mapper.PacienteMapper;
 import com.clinicaregional.clinica.repository.PacienteRepository;
 import com.clinicaregional.clinica.service.PacienteService;
+import com.clinicaregional.clinica.service.S3ServicePublic;
 import com.clinicaregional.clinica.service.TipoDocumentoService;
 import com.clinicaregional.clinica.mapper.SeguroMapper;
 import com.clinicaregional.clinica.repository.SeguroRepository;
@@ -28,13 +34,12 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.DuplicateFormatFlagsException;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Page;
+import org.springframework.web.multipart.MultipartFile;
 
 @Service
 @Slf4j
@@ -45,9 +50,13 @@ public class PacienteServiceImpl implements PacienteService {
     private final TipoDocumentoService tipoDocumentoService;
     private final UsuarioService usuarioService;
     private final FiltroEstado filtroEstado;
+
     private final SeguroRepository seguroRepository;
     private final BienvenidaEmailService emailService;
     private final SeguroMapper seguroMapper;
+
+    private final S3ServicePublic s3Service;
+
 
     @Autowired
     public PacienteServiceImpl(
@@ -55,26 +64,35 @@ public class PacienteServiceImpl implements PacienteService {
             PacienteMapper pacienteMapper,
             TipoDocumentoService tipoDocumentoService,
             UsuarioService usuarioService,
+
             FiltroEstado filtroEstado, SeguroRepository seguroRepository, BienvenidaEmailService emailService,
             SeguroMapper seguroMapper) {
+
+            FiltroEstado filtroEstado, S3ServicePublic s3Service) {
+
         this.pacienteRepository = pacienteRepository;
         this.pacienteMapper = pacienteMapper;
         this.tipoDocumentoService = tipoDocumentoService;
         this.usuarioService = usuarioService;
         this.filtroEstado = filtroEstado;
+
         this.seguroRepository = seguroRepository;
         this.emailService = emailService;
         this.seguroMapper = seguroMapper;
+
+        this.s3Service = s3Service;
+
     }
 
     @Transactional(readOnly = true)
     @Override
     public List<PacienteConUserDTO> listarPacientes() {
         filtroEstado.activarFiltroEstado(true);
-        return pacienteRepository.findAll()
+        List<PacienteDTO> pacientes = pacienteRepository.findAll()
                 .stream()
                 .map(pacienteMapper::mapToPacienteDTO)
-                .collect(Collectors.toList());
+                .toList();
+        return pacientes.stream().map(this::agregarUrlImage).collect(Collectors.toList());
     }
 
     // Listar pacientes sin importar el filtro de estado
@@ -91,8 +109,10 @@ public class PacienteServiceImpl implements PacienteService {
     @Override
     public Optional<PacienteConUserDTO> getPacientePorId(Long id) {
         filtroEstado.activarFiltroEstado(true);
-        return pacienteRepository.findByIdAndEstadoIsTrue(id)
+        Optional<PacienteDTO> paciente = pacienteRepository.findByIdAndEstadoIsTrue(id)
                 .map(pacienteMapper::mapToPacienteDTO);
+
+        return paciente.map(this::agregarUrlImage);
 
     }
 
@@ -100,16 +120,25 @@ public class PacienteServiceImpl implements PacienteService {
     @Override
     public Optional<PacienteConUserDTO> getPacientePorIdentificacion(String identificacion) {
         filtroEstado.activarFiltroEstado(true);
-        return pacienteRepository.findByNumeroIdentificacion(identificacion)
+        Optional<PacienteDTO> paciente = pacienteRepository.findByNumeroIdentificacion(identificacion)
                 .map(pacienteMapper::mapToPacienteDTO);
+        return paciente.map(this::agregarUrlImage);
     }
 
     @Transactional(readOnly = true)
     @Override
     // despues agregar validacion de owner
     public MyInfoPaciente getMyInfoPaciente(Long pacienteId) {
+ dev
         Paciente paciente = pacienteRepository.findByIdAndEstadoIsTrue(pacienteId)
                 .orElseThrow(() -> new ResourceNotFoundException("Paciente no encontrado con id" + pacienteId));
+/*
+        Paciente paciente = pacienteRepository.findByIdAndEstadoIsTrue(pacienteId).orElseThrow(()->new ResourceNotFoundException("Paciente no encontrado con id" + pacienteId));
+        if (paciente.getImagenUrl() != null) {
+            String imageUrl = s3Service.generarUrlPublico(paciente.getImagenUrl());
+            paciente.setImagenUrl(imageUrl);
+        }*/
+
         return pacienteMapper.mapToMyInfoPaciente(paciente);
     }
 
@@ -160,7 +189,11 @@ public class PacienteServiceImpl implements PacienteService {
 
     @Transactional
     @Override
+
     public PacienteConUserDTO crearPacientePorWeb(PacienteConUserDTO pacienteDTO) {
+/*
+    public PacienteDTO crearPaciente(PacienteDTO pacienteDTO, MultipartFile imagen) {*/
+
         filtroEstado.activarFiltroEstado(true);
         if (pacienteRepository.findByNumeroIdentificacion(pacienteDTO.getNumeroIdentificacion()).isPresent()) {
             throw new DuplicateResourceException("Ya existe un paciente con ese número de identificación");
@@ -180,13 +213,23 @@ public class PacienteServiceImpl implements PacienteService {
             paciente.setUsuario(usuario);
         }
 
+        if (imagen != null) {
+            String key = s3Service.subirArchivo(imagen, "paciente" + paciente.getNombres());
+            paciente.setImagenUrl(key);
+        }
+
         Paciente savedPaciente = pacienteRepository.save(paciente);
-        return pacienteMapper.mapToPacienteDTO(savedPaciente);
+        return this.agregarUrlImage(pacienteMapper.mapToPacienteDTO(savedPaciente));
     }
 
     @Transactional
     @Override
+
     public PacienteConUserDTO actualizarPaciente(Long id, UpdatePacienteDTO updatePacienteDTO) {
+/*
+    public PacienteDTO actualizarPaciente(Long id, PacienteDTO pacienteDTO, MultipartFile imagen) {
+        filtroEstado.activarFiltroEstado(true);*/
+
         Paciente paciente = pacienteRepository.findByIdAndEstadoIsTrue(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Paciente no encontrado con id: " + id));
 
@@ -207,14 +250,23 @@ public class PacienteServiceImpl implements PacienteService {
             paciente.setAntecedentes(updatePacienteDTO.getAntecedentes());
         }
 
+        if (imagen != null) {
+            if (paciente.getImagenUrl() != null) {
+                s3Service.eliminarArchivo(paciente.getImagenUrl());
+            }
+            String key = s3Service.subirArchivo(imagen, "paciente" + paciente.getNombres());
+            paciente.setImagenUrl(key);
+        }
+
         Paciente updatedPaciente = pacienteRepository.save(paciente);
-        return pacienteMapper.mapToPacienteDTO(updatedPaciente);
+        return this.agregarUrlImage(pacienteMapper.mapToPacienteDTO(updatedPaciente));
     }
 
     @Transactional
     @Override
     public void eliminarPaciente(Long id) {
         filtroEstado.activarFiltroEstado(true);
+
         Paciente paciente = pacienteRepository.findByIdAndEstadoIsTrue(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Paciente no encontrado"));
 
@@ -240,6 +292,16 @@ public class PacienteServiceImpl implements PacienteService {
             paciente.setEstado(false);
             pacienteRepository.save(paciente);
         }
+/*
+        Paciente paciente = pacienteRepository.findByIdAndEstadoIsTrue(id).orElseThrow(() -> new ResourceNotFoundException("Paciente no encontrado"));
+        paciente.setEstado(false); //borrado logico
+        usuarioService.eliminar(paciente.getUsuario().getId());
+        paciente.setUsuario(null);
+        if (paciente.getImagenUrl() != null) {
+            s3Service.eliminarArchivo(paciente.getImagenUrl());
+        }
+        pacienteRepository.save(paciente);*/
+
     }
 
     @Override
@@ -250,10 +312,10 @@ public class PacienteServiceImpl implements PacienteService {
         List<PacienteConUserDTO> contenido = paginaPacientes.getContent()
                 .stream()
                 .map(pacienteMapper::mapToPacienteDTO)
-                .collect(Collectors.toList());
-
+                .toList();
+        List<PacienteDTO> contenidoWithUrlImage = contenido.stream().map(this::agregarUrlImage).toList();
         return new PagedResponse<>(
-                contenido,
+                contenidoWithUrlImage,
                 paginaPacientes.getNumber(),
                 paginaPacientes.getSize(),
                 paginaPacientes.getTotalElements(),
@@ -261,10 +323,21 @@ public class PacienteServiceImpl implements PacienteService {
                 paginaPacientes.isLast());
     }
 
+
     @Override
     public Optional<PacienteConUserDTO> getPacientePorEmail(String email) {
         filtroEstado.activarFiltroEstado(true);
         return pacienteRepository.findByEmail(email)
                 .map(pacienteMapper::mapToPacienteDTO);
     }
+
+    //funcion para obtener el url
+    private PacienteDTO agregarUrlImage(PacienteDTO pacienteDTO) {
+        if (pacienteDTO.getImagenUrl() != null) {
+            String imageUrl = s3Service.generarUrlPublico(pacienteDTO.getImagenUrl());
+            pacienteDTO.setImagenUrl(imageUrl);
+        }
+        return pacienteDTO;
+    }
+
 }
